fix: align share buttons on the contact page

--- a/src/styles/components/_lf-share-button.scss
+++ b/src/styles/components/_lf-share-button.scss
@@ -3,6 +3,10 @@
 .lf-share-buttons {
 	display: flex;
 	gap: 20rem;
+
+	&--no-margin {
+		margin: 0;
+	}
 }
 
 .lf-share-button {
